# BilibiliDMB_Qt

./: BilibiliDMB.pro  CMakeLists.txt  bilibiliDMB.cpp  bilibiliDMB.h  bilibiliDMB.ui  main.cpp  plugin.h
Core/: CMakeLists.txt
Core/include/Core/: AbstractDanmuServer.h  Bilibili.h  Danmu.h  utils.h
Core/src/: Bilibili.cpp
Core/test/: CMakeLists.txt  main.cpp
GUI/: CMakeLists.txt
GUI/qml/: DanmuView.qml  MedalDanmuView.qml  MedalView.qml  main.qml  qml.qrc
GUI/src/: main.cpp
GUI/test/: CMakeLists.txt  main.cpp
src/: Danmu_global.h  README  bilibiliDMB.cpp  bilibiliDMB.h  bilibiliDMB.ui  danmu.cpp  danmu.h  danmumanager.cpp  danmumanager.h  utils.h
